# CAENReadout

./: CMakeLists.txt  README.md
Readout/: CSVData.py  DN.sh  HVcontrol.py  LaserControl.py  Makefile  QE.sh  beginrun.sh  config.py  endrun.sh  flow.py  scpJp.sh  syncDatabase.sh
Readout/config/: APconfig.json  DCRconfig.json  MCPconfig.json  QEconfig.json  config.json  pedestal.txt  setting.json
cmake/: FindCAENDigitizer.cmake  FindCAENVME.cmake
gui/python/: main.py
gui/root/: CMakeLists.txt  LinkDef.h  main.cxx  main.h
include/: ReadoutType.h  config.hxx  readout.hxx
src/: Readout.C  main.cxx  readout.cxx  readoutBind.cpp
